--- a/minikube/app-mini-deploy.yml
+++ b/minikube/app-mini-deploy.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: todo-app
-        image: ahmedalaa14/todo-app-img:latest  
+        image: ahmedalaa14/todo-app:latest  
         ports:
         - containerPort: 5000
         resources:
